// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> matches previous snapshot 1`] = `
<button
  className="button--pressed"
>
  default
</button>
`;

exports[`<Button /> matches previous snapshot 2`] = `
<button
  className="button"
>
  default
</button>
`;

exports[`<Button /> matches previous snapshot 3`] = `
<button
  className="button"
>
  Press me!
</button>
`;
